Table usuario {
  id int [pk]
  nome text
  email text [unique]
  senha_hash text
  papel text // 'ALUNO' | 'PROFESSOR' | 'SECRETARIA'
}

Table aluno { id int [pk, ref: > usuario.id] }
Table professor { id int [pk, ref: > usuario.id] }

Table curso { id int [pk]; nome text; creditos int }
Table disciplina { id int [pk]; codigo text [unique]; nome text; creditos int }

Table curso_disciplina {
  curso_id int [ref: > curso.id]
  disciplina_id int [ref: > disciplina.id]
  obrigatoria boolean
  Indexes { (curso_id, disciplina_id) [unique] }
}

Table periodo_matricula {
  id int [pk]; ano int; semestre int; inicio timestamp; fim timestamp
  Indexes { (ano, semestre) [unique] }
}

Table oferta_disciplina {
  id int [pk]
  disciplina_id int [ref: > disciplina.id]
  professor_id int [ref: > professor.id]
  periodo_id int [ref: > periodo_matricula.id]
  capacidade_max int
  status text
  Indexes { (disciplina_id, periodo_id) [unique] }
}

Table matricula {
  id int [pk]
  aluno_id int [ref: > aluno.id]
  oferta_id int [ref: > oferta_disciplina.id]
  tipo text
  status text
  data_criacao timestamp
  Indexes { (aluno_id, oferta_id) [unique] }
}
